--- a/PracticeJS/index.html
+++ b/PracticeJS/index.html
@@ -101,11 +101,13 @@
         </div>
         <div class="button" onclick="toggleContent('content9')">9 đếm số nguyên </div>
         <div id="content9" class="content">
-            Nội dung cho tìm số dương nhỏ nhất
+            <button id="countPrime">Find</button>
+            <span id="result9"> </span>
         </div>
         <div class="button" onclick="toggleContent('content10')">10 so sánh số lượng số âm và số dương </div>
         <div id="content10" class="content">
-            Nội dung cho tìm số dương nhỏ nhất
+            <button id="checkNumber1">Find</button>
+            <span id="result10"> </span>
         </div>
         
 
